[project]
name = "condition-utils"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lrzjason/Comfyui-Condition-Utils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lrzjason"
DisplayName = "Comfyui-Condition-Utils"
Icon = ""
